--- a/app/css/common.css
+++ b/app/css/common.css
@@ -66,3 +66,12 @@ body {
 .font-color {
   color: #78b7ff;
 }
+
+.arc text {
+  font: 10px sans-serif;
+  text-anchor: middle;
+}
+
+.arc path {
+  stroke: #fff;
+}
